# rust-webrtc-call

./: .gitignore  docker-compose.yml  env.example  init.sql  package-lock.json  text.txt
call-WebRtc/: GETTING_STARTED.md  QUICK_START.md  README.md  index.html  package-lock.json  (+2 more)
signaling/: Cargo.toml
signaling/migrations/: 20250814014648_init.sql
signaling/src/: app_state.rs  container.rs  main.rs  router.rs
signaling/src/common/: error.rs  mod.rs  response.rs
signaling/src/common/extractors/: resource_id.rs
signaling/src/modules/: mod.rs
signaling/src/modules/chat/: entity.rs  handlers.rs  mod.rs  routes.rs
signaling/src/modules/chat/dto/: input.rs  mod.rs  output.rs
signaling/src/modules/chat/repository/: mod.rs  postgres.rs  repository_trait.rs
signaling/src/modules/chat/service/: mod.rs  service_impl.rs  service_trait.rs
signaling/src/modules/participants/: entity.rs  handlers.rs  mod.rs  routes.rs
signaling/src/modules/participants/dto/: input.rs  output.rs
signaling/src/modules/participants/repository/: mod.rs  postgres.rs  repository_trait.rs
signaling/src/modules/participants/service/: mod.rs  service_impl.rs  service_trait.rs
signaling/src/modules/rooms/: entity.rs  handler.rs  handlers.rs  mod.rs  routes.rs
signaling/src/modules/rooms/dto/: input.rs  output.rs
signaling/src/modules/rooms/repository/: mod.rs  postgres.rs  repository_trait.rs
signaling/src/modules/rooms/service/: mod.rs  service_impl.rs  service_trait.rs
signaling/src/ws/: connection.rs  dto.rs  errors.rs  handler.rs  hub.rs  message.rs  mod.rs  routes.rs
(+30 files in other folders)
