[package]
name = "signaling"
version = "0.1.0"
edition = "2024"

[dependencies]

axum = {version = "0.8.4", features = ["ws"]}
tokio = { version = "1.47.1", features = ["full"] }
uuid = "1.18.0" 

serde = { version = "1.0.219"}
serde_json = "1.0.142"

tracing = "0.1.41"
dotenvy = "0.15.7"
thiserror = "2.0.12"