[package]
name = "signaling"
version = "0.1.0"
edition = "2024"

[dependencies]

axum = {version = "0.8.4", features = ["ws"]}
tokio = { version = "1.47.1", features = ["full"] }
uuid = {version = "1.18.0", features = ["v4", "serde"]}

serde = { version = "1.0.219",  features = ["derive"]}
serde_json = "1.0.142"
futures-util = "0.3"
async-trait = "0.1.88"

tracing = "0.1.41"
tracing-subscriber = {version = "0.3.19", features = ["env-filter"]}

dotenvy = "0.15.7"
thiserror = "2.0.12"

# Database dependencies
sqlx = { version = "0.8.6", features = ["runtime-tokio-rustls", "postgres", "chrono", "uuid"] }
chrono = { version = "0.4.41", features = ["serde"] }
dotenv = "0.15"

# Random generation
rand = "0.8.5"